feat: Brewery X cBridge style

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -1,5 +1,10 @@
 @import "~antd/dist/antd.less";
-
+@media (max-width: 769px){
+  #root {
+      width: 100%;
+      padding-top: 65px;
+  }
+}
 @media screen and (max-width: 768px) {
   .ant-modal {
     border-radius: 16px 16px 0px 0px;
@@ -106,8 +111,8 @@ input[type="number"] {
 .ant-btn-primary:focus,
 .ant-btn-primary:hover {
   color: #fff;
-  border-color: #3366ff;
-  background: #3366ff;
+  border-color: #28BF5C;
+  background: #28BF5C;
 }
 // .ant-spin-container::after {
 //   background: #303030;
@@ -162,6 +167,7 @@ input[type="number"] {
 }
 
 .chainLocale {
+  width: 248px;
   display: flex;
   align-items: center;
   border-radius: 12px;
@@ -169,6 +175,10 @@ input[type="number"] {
   margin-left: 8px;
   cursor: pointer;
   height: 44px;
+  img {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .ant-tooltip-inner {
@@ -207,7 +217,7 @@ input[type="number"] {
     display: block;
   }
   .chinName {
-    display: none;
+    // display: none;
   }
 
   .chainLocale {
