--- a/src/app/app.less
+++ b/src/app/app.less
@@ -106,8 +106,8 @@ input[type="number"] {
 .ant-btn-primary:focus,
 .ant-btn-primary:hover {
   color: #fff;
-  border-color: #3366ff;
-  background: #3366ff;
+  border-color: #28BF5C;
+  background: #28BF5C;
 }
 // .ant-spin-container::after {
 //   background: #303030;
@@ -162,6 +162,7 @@ input[type="number"] {
 }
 
 .chainLocale {
+  width: 248px;
   display: flex;
   align-items: center;
   border-radius: 12px;
@@ -169,6 +170,10 @@ input[type="number"] {
   margin-left: 8px;
   cursor: pointer;
   height: 44px;
+  img {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .ant-tooltip-inner {
@@ -207,7 +212,7 @@ input[type="number"] {
     display: block;
   }
   .chinName {
-    display: none;
+    // display: none;
   }
 
   .chainLocale {
